--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -3,6 +3,7 @@
     width: 2rem;
     background-color: rgb(255, 255, 255) !important;
    margin-left: 4rem;
+   border-radius: 50px;
 }
 
 .socialMedial{
@@ -20,6 +21,6 @@
 .sMediaIcon{
     height: 2rem;
     width: 2rem;
-    border-radius: 25%;
+    border-radius: 50px;
     
 }
