about page Implemented

--- a/src/components/pages/store/ProductBody.css
+++ b/src/components/pages/store/ProductBody.css
@@ -15,3 +15,10 @@
         overflow: scroll;
 
     }
+
+    .cartBtn{
+        position:relative;
+        left: 42%;
+        width: 10rem;
+        margin-bottom: 2rem;
+    }
