product page implemented to show details about the product

--- a/src/components/pages/ContactUs/ContactUs.css
+++ b/src/components/pages/ContactUs/ContactUs.css
@@ -21,7 +21,9 @@ body{
 }
 
 .heading{
-    margin-left: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
     background-color: aliceblue !important;
 }
 
