login logout functionality added to the ecommerce web

--- a/src/components/pages/store/ProductBody.css
+++ b/src/components/pages/store/ProductBody.css
@@ -10,7 +10,7 @@
     }
     .parentDiv{
         background-color: aliceblue;    
-    
+        margin-top: 8% !important;
             
         overflow: scroll;
 
