--- a/src/components/pages/store/Product.css
+++ b/src/components/pages/store/Product.css
@@ -1,5 +1,5 @@
 .addBtn{
-    margin: 0 !important;
+    margin: 0.1rem !important;
     
 }
 
@@ -14,6 +14,11 @@
 }
 
 .cardImg{
-   width: 10rem;
+   width: 17.8rem;
    height: 18rem;
+
+}
+
+.addedAlert{
+  position: absolute !important;
 }
